Skip to content

Solaris fails to load modules on undef _FILE_OFFSET_BITS

VLC 1.0.1 in modules/modules.c, lines 37-39 undefine _FILE_OFFSET_BITS. However, on Solaris, this actually causes the module code to be unable to open any of the modules; traces show that it is trying to open the module filenames with the first 8 characters of the correct filename (not the full directory path) cut off. Removing these lines fixes the issue.

Edited by ywlke
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information