Do not undef _FILE_OFFSET_BITS (fixes: #3031)

This partially reverts f1175e715bfd288cdd17bf34ee3ee4f4b137432b.